bad/var_decl_init_invalid_conversion_class_string.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_class_string.lat:5:6: [1;31merror: [0;1mincompatible types: cannot assign variable of type `Y` with an expression of type `string`[m
	Y x = "";
	    [1;32m^[m
